[package]
name = "robofuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.6"
reqwest = "0.11.6"
tokio = { version = "1.12.0", features = ["full"] }
indicatif = "0.16.2"
colorful = "0.2.1"
crossterm = "0.22.1"
futures = "0.3"
url = "2.2.2"
lazy_static = "1.4"
regex = "1.10.4"
scraper = "0.12.0"
